Use instance main method